# rest-sec-test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_seed_data.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  models.py
app/repositories/: __init__.py  activity_repository.py  building_repository.py  organization_repository.py
app/routers/: __init__.py  activities.py  buildings.py  organizations.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  organization_service.py
